# cookiecutter-python-package

./: README.rst  cookiecutter.json
{{cookiecutter.project_name}}/: .darglint  .flake8  README.rst  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/doc/src/: conf.py  index.rst
{{cookiecutter.project_name}}/src/{{cookiecutter.root_package}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.project_name}}/test/: test_main.py  test_version.py
