[tool.poetry]
name = "ophir-xyz"
version = "0.0.0"
description = "Ophir Xyz"
authors = ["Juan Alonso <jabaldonedo@gmail.com>"]
readme = "README.rst"
packages = [
    { include = "{{cookiecutter.root_package}}", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
