[tool.poetry]
name = "ophir-xyz"
version = "0.0.0"
description = "Ophir Xyz"
authors = ["Juan Alonso <jabaldonedo@gmail.com>"]
readme = "README.rst"
packages = [
    { include = "{{cookiecutter.root_package}}", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
toml = "^0.10.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["test", "*/test"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.root_package}}.{{cookiecutter.package_name}}", "test"]

[tool.coverage.report]
show_missing = true
fail_under = 80